# snv_calling

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: writeup.md
output/: model.json  real1_predictions.bed  real2_part1_predictions.bed  real2_part2_predictions.bed  sweep_mask_syn_best.json  syn1_predictions.bed  syn2_predictions.bed  syn3_predictions.bed  syn4_predictions.bed  syn5_predictions.bed  test_predictions.bed  train_predictions.bed
src/: domain_analysis.py  evaluate.py  parse_vcf.py  pipeline.py  plot_domain_shift.py  prepare_data.py  shap_analysis.py  sweep.py  train.py
